--- a/src/partials/team-modal-window.html
+++ b/src/partials/team-modal-window.html
@@ -1,6 +1,6 @@
         <!-- <div>
-            <button type="button" data-modal-open>Enter</button>
-        </div> -->
+            <button type="button" data-modal-open-team>Enter</button>
+        </div>  -->
         <div class="footerModal is-hidden" data-modal-team>
             <h3 class="footerHeadline">Worked on a project:</h3>
             <button type="button" class="modal__close-btn-team" data-modal-close-team>
