--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer slass="footer">
+<footer class="footer">
     <div class="container container_footer">
         <p class="footer-text">© 2022 | All Rights Reserved |&nbsp</p>
         <p class="footer-text">
