--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,19 +1,17 @@
-
-.footer {
-  position: absolute;
-  bottom: 100px;
-  width: 100%;
-  height: 77px;
-  background-color: var(--background-color_bright-theme);
-  padding-top: 28px;
-  padding-bottom: 28px;
-
+.footer  {
+  //position: absolute;
+  //bottom: 0;
+  //width: 100%;
+  //height: 77px;
+  //background-color: var(--background-color_bright-theme);
+  //padding-top: 28px;
+  //@debug: 28px;
 }
 
 .footer-text {
   @include font(400, 14, 16);
   font-family: 'Roboto';
-  line-height: calc(16 / 14);
+ line-height: calc(16 / 14);
   color: var(--secondary-text-color);
   text-align: center;
 }
@@ -27,42 +25,51 @@
 }
 
 
-
 //tablet
 @media screen and (min-width: 768px) {
-  .footer {
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
+.footer_footer {
+padding-top: 30px;
+padding-bottom: 30px;
+}
 
-  .container_footer {
-    display: flex;
-    justify-content: center;
-    align-items: baseline;
-  }
+.container_footer {
+ display: flex;
+ justify-content: center;
+ align-items: baseline;
+ //////transfered from .footer
+ //position: absolute;
+ bottom: 0;
+ width: 100%;
+ height: 77px;
+ background-color: var(--background-color_bright-theme);
+ padding-top: 28px;
+ padding-bottom: 28px;
+}
 
-  .footer-text {
-    font-size: 16px;
-    line-height: calc(16 / 18);
-  }
-
-  .footer-link {
-    font-size: 16px;
-    line-height: calc(16 / 18);
-  }
+.footer-text {
+font-size: 16px;
+line-height: calc(16 / 18);
+}
+.footer-link {
+ font-size: 16px;
+ line-height: calc(16 / 18);
+}
 
 }
 
 //desktop
 @media screen and (min-width: 1280px) {
-  .footer {
-    padding-bottom: 28px;
-  }
+  .container_footer {
+padding-bottom: 28px;
 }
 
-//animation
+  }
+
+  //Animationnnnnnnn
+  //new
+
 .footer-icon {
-  width: 16px;
+ width: 16px;
   height: 16px;
   -webkit-animation: pulsing 2s infinite;
   animation: pulsing 2s infinite;
@@ -101,4 +108,3 @@
     transform: scale(0.5, 0.5);
   }
 }
-
