--- a/src/partials/film-modal-window.html
+++ b/src/partials/film-modal-window.html
@@ -6,4 +6,4 @@
 
 </div>
 <script type="module" src="/src/js/open-modal-window.js"></script>
-<script type="module" src="/src/js/add-to-watched.js"></script>
+<!-- <script type="module" src="/src/js/add-to-watched.js"></script> -->
