--- a/src/partials/film-modal-window.html
+++ b/src/partials/film-modal-window.html
@@ -2,8 +2,12 @@
     <button type="button" data-modal-open>Enter</button>
 </div>
 
-<div class="backdrop is-hidden" data-modal>
 
+<div class="backdrop is-hidden" data-modal>
+    <div class="modal">
+        <button type="button" class="modal__close-btn" data-modal-close>
+        </button>
+    </div>
 </div>
 <script type="module" src="/src/js/open-modal-window.js"></script>
 <!-- <script type="module" src="/src/js/add-to-watched.js"></script> -->
