add base tui pagination

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -14,7 +14,7 @@
 @import './components/modal-footer';
 
 @import './layout/film-grid';
+@import './components/pagination';
 @import './layout/header';
 @import './layout/footer';
 @import './layout/my_lib_header';
-
