--- a/src/partials/film-modal-window.html
+++ b/src/partials/film-modal-window.html
@@ -7,5 +7,5 @@
 
 
 </div>
-<script type="module" src="/src/js/open-modal-window.js"></script>
+<!-- <script type="module" src="/src/js/open-modal-window.js"></script> -->
 <!-- <script type="module" src="/src/js/add-to-watched.js"></script> -->
