--- a/src/sass/components/_film-modal-window.scss
+++ b/src/sass/components/_film-modal-window.scss
@@ -28,8 +28,8 @@
     transition: transform 500ms var(--timing-function);
     ;
     margin: 20px 10px;  
-
     padding: 40px 20px;
+    border-radius: 10px;
     overflow-y: scroll;
     overflow-x: hidden;
     width: 280px;
