--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -14,6 +14,7 @@ body {
     font-family: var(--major-font-family);
     color: var(--primary-color);
     letter-spacing: 0.08em;
+    position: relative;
 }
 
 h1,
