--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,4 +1,4 @@
-.footer  {
+//.footer  {
   //position: absolute;
   //bottom: 0;
   //width: 100%;
@@ -6,7 +6,7 @@
   //background-color: var(--background-color_bright-theme);
   //padding-top: 28px;
   //@debug: 28px;
-}
+//}
 
 .footer-text {
   @include font(400, 14, 16);
@@ -37,7 +37,7 @@ padding-bottom: 30px;
  justify-content: center;
  align-items: baseline;
  //////transfered from .footer
- //position: absolute;
+ position: fixed;
  bottom: 0;
  width: 100%;
  height: 77px;
