--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -37,7 +37,7 @@ padding-bottom: 30px;
  justify-content: center;
  align-items: baseline;
  //////transfered from .footer
- position: fixed;
+position: fixed;
  bottom: 0;
  width: 100%;
  height: 77px;
@@ -65,7 +65,7 @@ padding-bottom: 28px;
 
   }
 
-  //Animationnnnnnnn
+  //animation
   //new
 
 .footer-icon {
