--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,6 +13,7 @@
 @import './components/loader';
 @import './components/modal-footer';
 
+@import './components/custom-pagination';
 @import './layout/film-grid';
 @import './components/pagination';
 @import './layout/header';
