--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,8 +1,9 @@
 <section class="film-list-section">
-    <div class="container container-main">
-        <div class="film-grid">
-            <!-- сюди будемо динамічно вставляти картки фільмів -->
-        </div>
+  <div class="container container-main">
+    <div class="film-grid">
+      <!-- сюди будемо динамічно вставляти картки фільмів -->
+      <div class="list" id="list"></div>
+      <div class="pagenumbers" id="pagination"></div>
     </div>
+  </div>
 </section>
-
