--- a/src/partials/team-modal-window.html
+++ b/src/partials/team-modal-window.html
@@ -1,8 +1,6 @@
-        <!-- <div>
-            <button type="button" data-modal-open-team>Enter</button>
-        </div>  -->
+
         <div class="footerModal is-hidden" data-modal-team>
-            <h3 class="footerHeadline">Worked on a project:</h3>
+            <h3 class="footerHeadline">Worked on the project:</h3>
             <button type="button" class="modal__close-btn-team" data-modal-close-team>
             </button>
             <ul class="teamList">
@@ -11,8 +9,9 @@
                         src="https://avatars.githubusercontent.com/u/97597653?v=4"
                         alt="" width="256" height="256">
                     <div class="cardRear">
+                        <p class="teamRoles">Team lead</p>
                         <p class="teamName">Peter Yurich</p>
-                        <p class="city">Kyiv</p>
+                        <p class="city">Dnipro</p>
                     </div>
                 </li>
                 <li class="teamCard">
@@ -20,6 +19,7 @@
                         src="https://avatars.githubusercontent.com/u/93533516?v=4"
                         alt="" width="256" height="256">
                     <div class="cardRear">
+                        <p class="teamRoles">Scrum master</p>
                         <p class="teamName">Tetiana Ishchenko</p>
                         <p class="city">Kyiv</p>
                     </div>
@@ -29,6 +29,7 @@
                         src="https://avatars.githubusercontent.com/u/97792710?v=4" 
                         alt="" width="256" height="256">
                     <div class="cardRear">
+                        <p class="teamRoles">Developer</p>
                         <p class="teamName">Evgen Prohorenko</p>
                         <p class="city">Kyiv</p>
                     </div>
@@ -38,6 +39,7 @@
                         src="https://avatars.githubusercontent.com/u/97344472?v=4"
                         alt="" width="256" height="256">
                     <div class="cardRear">
+                        <p class="teamRoles">Developer</p>
                         <p class="teamName">Alona Beskhlibnova</p>
                         <p class="city">Odesa</p>
                     </div>
@@ -47,6 +49,7 @@
                         src="https://avatars.githubusercontent.com/u/97482927?v=4"
                         alt="" width="256" height="256">
                     <div class="cardRear">
+                        <p class="teamRoles">Developer</p>
                         <p class="teamName">Miroslav Semenuk</p>
                         <p class="city">Kyiv</p>
                     </div>
@@ -56,6 +59,7 @@
                         src="https://avatars.githubusercontent.com/u/99369016?v=4"
                         alt="" width="256" height="256">
                     <div class="cardRear">
+                        <p class="teamRoles">Developer</p>
                         <p class="teamName">Mikhailo Korogod</p>
                         <p class="city">Kyiv</p>
                     </div>
@@ -65,8 +69,10 @@
                         src="https://avatars.githubusercontent.com/u/97561552?s=400&u=95d42ab96a1fd812b523d15edba99c985cd13104&v=4"
                         alt="" width="256" height="256">
                     <div class="cardRear">
-                        <p class="teamName">Golembovska Lyuda</p>
+                        <p class="teamRoles">Developer</p>
+                        <p class="teamName">Lyuda Golembovska</p>
                         <p class="city">Kyiv</p>
+                        <!-- <a href="https://github.com/Golembovskaya" -->
                     </div>
                 </li>
                 <li class="teamCard">
@@ -74,13 +80,14 @@
                         src="https://avatars.githubusercontent.com/u/96379129?v=4"
                         alt="" width="256" height="256">
                     <div class="cardRear">
+                        <p class="teamRoles">Developer</p>
                         <p class="teamName">Natalia Kolomiichenko</p>
                         <p class="city">Kyiv</p>
                     </div>
                 </li>
             </ul>
         </div>
-        <script src="/src/js/modal-footer-window.js"></script>
+        
   
         
     
