--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -3,5 +3,7 @@
     <div class="film-grid">
       <!-- сюди будемо динамічно вставляти картки фільмів -->
     </div>
+    <div class="list" id="list"></div>
+    <div class="pagenumbers" id="pagination"></div>
   </div>
 </section>
