--- a/src/partials/my_lib-header.html
+++ b/src/partials/my_lib-header.html
@@ -22,8 +22,8 @@
         </div>
 
         <div class="button_list">
-            <button class="my-lib-header-button">WATCHED</button>
-            <button class="my-lib-header-button">QUEUE</button>
+            <button class="my-lib-header-button" id="watched">WATCHED</button>
+            <button class="my-lib-header-button" id="queue">QUEUE</button>
         </div>
     </div>
 </header>
