--- a/src/sass/components/_modal-footer.scss
+++ b/src/sass/components/_modal-footer.scss
@@ -21,16 +21,15 @@
 
 @media screen and (min-width: 320px) {
   .cardFront {
-    width: 153px;
-    height: 153px;
+    width: 120px;
+    height: 120px;
   }
-
-  .footerHeadline {
-    font-size: 30px;
-  }
-  // .footerModal{
-  //   overflow: scroll;
+  // .footerHeadline {
+  //   font-size: 30px;
   // }
+    // .teamList {
+    //   gap: none;
+    // }
 }
 
 @media screen and (min-width: 768px) {
@@ -40,7 +39,7 @@
   }
 
   .footerHeadline {
-    font-size: 50px;
+    font-size: 40px;
   }
 }
 
@@ -60,7 +59,7 @@
   color: var(--dark-theme-text-color);
   margin: 0;
   margin-bottom: 40px;
-  margin-top: 10px;
+
   
 
   color: var(--secondary-text-modal-color);
@@ -79,7 +78,7 @@
   padding-left: 0;
   width: 90%;
   //column-count: 3;
-  gap: 40px;
+  gap: 30px;
   list-style: none;
   overflow-x: hidden;
 }
@@ -128,7 +127,7 @@
 }
 
 .modal__close-btn-team {
-  color: var(--dark-theme-text-color);
+  fill: var(--dark-theme-text-color);
   position: absolute;
   top: 10px;
   right: 10px;
