done buttons add to localstorage

--- a/src/partials/film-modal-window.html
+++ b/src/partials/film-modal-window.html
@@ -1,11 +1,3 @@
-<div>
-    <button type="button" data-modal-open>Enter</button>
-</div>
-
-
 <div class="backdrop is-hidden" data-modal>
-
-
+    <!-- add movie modal -->
 </div>
-<!-- <script type="module" src="/src/js/open-modal-window.js"></script> -->
-<!-- <script type="module" src="/src/js/add-to-watched.js"></script> -->
