--- a/src/partials/team-modal-window.html
+++ b/src/partials/team-modal-window.html
@@ -2,117 +2,74 @@
             <button type="button" data-modal-open-team>Enter</button>
         </div>  -->
 <div class="footerModal is-hidden" data-modal-team>
-  <h3 class="footerHeadline">Worked on a project:</h3>
-  <button
-    type="button"
-    class="modal__close-btn-team"
-    data-modal-close-team
-  ></button>
-  <ul class="teamList">
-    <li class="teamCard">
-      <img
-        class="cardFront"
-        src="https://avatars.githubusercontent.com/u/97597653?v=4"
-        alt=""
-        width="256"
-        height="256"
-      />
-      <div class="cardRear">
-        <p class="teamName">Peter Yurich</p>
-        <p class="city">Kyiv</p>
-      </div>
-    </li>
-    <li class="teamCard">
-      <img
-        class="cardFront"
-        src="https://avatars.githubusercontent.com/u/93533516?v=4"
-        alt=""
-        width="256"
-        height="256"
-      />
-      <div class="cardRear">
-        <p class="teamName">Tetiana Ishchenko</p>
-        <p class="city">Kyiv</p>
-      </div>
-    </li>
-    <li class="teamCard">
-      <img
-        class="cardFront"
-        src="https://avatars.githubusercontent.com/u/97792710?v=4"
-        alt=""
-        width="256"
-        height="256"
-      />
-      <div class="cardRear">
-        <p class="teamName">Yevhen Prokhorenko</p>
-        <p class="city">Kyiv</p>
-      </div>
-    </li>
-    <li class="teamCard">
-      <img
-        class="cardFront"
-        src="https://avatars.githubusercontent.com/u/97344472?v=4"
-        alt=""
-        width="256"
-        height="256"
-      />
-      <div class="cardRear">
-        <p class="teamName">Alona Beskhlibnova</p>
-        <p class="city">Odesa</p>
-      </div>
-    </li>
-    <li class="teamCard">
-      <img
-        class="cardFront"
-        src="https://avatars.githubusercontent.com/u/97482927?v=4"
-        alt=""
-        width="256"
-        height="256"
-      />
-      <div class="cardRear">
-        <p class="teamName">Miroslav Semenuk</p>
-        <p class="city">Kyiv</p>
-      </div>
-    </li>
-    <li class="teamCard">
-      <img
-        class="cardFront"
-        src="https://avatars.githubusercontent.com/u/99369016?v=4"
-        alt=""
-        width="256"
-        height="256"
-      />
-      <div class="cardRear">
-        <p class="teamName">Mikhailo Korogod</p>
-        <p class="city">Kyiv</p>
-      </div>
-    </li>
-    <li class="teamCard">
-      <img
-        class="cardFront"
-        src="https://avatars.githubusercontent.com/u/97561552?s=400&u=95d42ab96a1fd812b523d15edba99c985cd13104&v=4"
-        alt=""
-        width="256"
-        height="256"
-      />
-      <div class="cardRear">
-        <p class="teamName">Golembovska Lyuda</p>
-        <p class="city">Kyiv</p>
-      </div>
-    </li>
-    <li class="teamCard">
-      <img
-        class="cardFront"
-        src="https://avatars.githubusercontent.com/u/96379129?v=4"
-        alt=""
-        width="256"
-        height="256"
-      />
-      <div class="cardRear">
-        <p class="teamName">Natalia Kolomiichenko</p>
-        <p class="city">Kyiv</p>
-      </div>
-    </li>
-  </ul>
+    <h3 class="footerHeadline">Worked on a project:</h3>
+    <button type="button" class="modal__close-btn-team" data-modal-close-team></button>
+    <ul class="teamList">
+        <li class="teamCard">
+            <img class="cardFront" src="https://avatars.githubusercontent.com/u/97597653?v=4" alt="" width="256"
+                height="256" />
+            <div class="cardRear">
+                <p class="teamName">Peter Yurich</p>
+                <p class="city">Kyiv</p>
+            </div>
+        </li>
+        <li class="teamCard">
+            <img class="cardFront" src="https://avatars.githubusercontent.com/u/93533516?v=4" alt="" width="256"
+                height="256" />
+            <div class="cardRear">
+                <p class="teamName">Tetiana Ishchenko</p>
+                <p class="city">Kyiv</p>
+            </div>
+        </li>
+        <li class="teamCard">
+            <img class="cardFront" src="https://avatars.githubusercontent.com/u/97792710?v=4" alt="" width="256"
+                height="256" />
+            <div class="cardRear">
+                <p class="teamName">Yevhen Prokhorenko</p>
+                <p class="city">Kyiv</p>
+            </div>
+        </li>
+        <li class="teamCard">
+            <img class="cardFront" src="https://avatars.githubusercontent.com/u/97344472?v=4" alt="" width="256"
+                height="256" />
+            <div class="cardRear">
+                <p class="teamName">Alona Beskhlibnova</p>
+                <p class="city">Odesa</p>
+            </div>
+        </li>
+        <li class="teamCard">
+            <img class="cardFront" src="https://avatars.githubusercontent.com/u/97482927?v=4" alt="" width="256"
+                height="256" />
+            <div class="cardRear">
+                <p class="teamName">Miroslav Semenuk</p>
+                <p class="city">Kyiv</p>
+            </div>
+        </li>
+        <li class="teamCard">
+            <img class="cardFront" src="https://avatars.githubusercontent.com/u/99369016?v=4" alt="" width="256"
+                height="256" />
+            <div class="cardRear">
+                <p class="teamName">Mikhailo Korogod</p>
+                <p class="city">Kyiv</p>
+            </div>
+        </li>
+        <li class="teamCard">
+            <img class="cardFront"
+                src="https://avatars.githubusercontent.com/u/97561552?s=400&u=95d42ab96a1fd812b523d15edba99c985cd13104&v=4"
+                alt="" width="256" height="256" />
+            <div class="cardRear">
+                <p class="teamName">Golembovska Lyuda</p>
+                <p class="city">Kyiv</p>
+            </div>
+        </li>
+        <li class="teamCard">
+            <img class="cardFront" src="https://avatars.githubusercontent.com/u/96379129?v=4" alt="" width="256"
+                height="256" />
+            <div class="cardRear">
+                <p class="teamName">Natalia Kolomiichenko</p>
+                <p class="city">Kyiv</p>
+            </div>
+        </li>
+    </ul>
 </div>
 <script src="/src/js/modal-footer-window.js"></script>
