--- a/src/partials/team-modal-window.html
+++ b/src/partials/team-modal-window.html
@@ -11,7 +11,18 @@
                     <div class="cardRear">
                         <p class="teamRoles">Team lead</p>
                         <p class="teamName">Peter Yurich</p>
-                        <p class="city">Dnipro</p>
+                        <!-- <ul class="github">
+                            <li class="githab__link"> -->
+                                <a href="https://github.com/PeterYurich" target="_blank" class="city">
+                                    <svg class="githab__icon" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-github">
+
+                                        </use>
+                                    </svg>
+                                </a>
+                            <!-- </li>
+                        </ul> -->
+                        <!-- <p class="city">Dnipro</p> -->
                     </div>
                 </li>
                 <li class="teamCard">
@@ -21,7 +32,18 @@
                     <div class="cardRear">
                         <p class="teamRoles">Scrum master</p>
                         <p class="teamName">Tetiana Ishchenko</p>
-                        <p class="city">Kyiv</p>
+                        <!-- <ul class="github">
+                            <li class="githab__link"> -->
+                        <a href="https://github.com/TanichkaIs" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                        
+                                </use>
+                            </svg>
+                        </a>
+                        <!-- </li>
+                            </ul> -->
+                        <!-- <p class="city">Kyiv</p> -->
                     </div>
                 </li>
                 <li class="teamCard">
@@ -31,7 +53,18 @@
                     <div class="cardRear">
                         <p class="teamRoles">Developer</p>
                         <p class="teamName">Evgen Prohorenko</p>
-                        <p class="city">Kyiv</p>
+                        <!-- <ul class="github">
+                                <li class="githab__link"> -->
+                        <a href="https://github.com/YevhenProkhorenko" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                        
+                                </use>
+                            </svg>
+                        </a>
+                        <!-- </li>
+                                </ul> -->
+                        <!-- <p class="city">Kyiv</p> -->
                     </div>
                 </li>
                 <li class="teamCard">
@@ -41,7 +74,18 @@
                     <div class="cardRear">
                         <p class="teamRoles">Developer</p>
                         <p class="teamName">Alona Beskhlibnova</p>
-                        <p class="city">Odesa</p>
+                        <!-- <ul class="github">
+                                <li class="githab__link"> -->
+                        <a href="https://github.com/abeskhlibnova" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                        
+                                </use>
+                            </svg>
+                        </a>
+                        <!-- </li>
+                                </ul> -->
+                        <!-- <p class="city">Odesa</p> -->
                     </div>
                 </li>
                 <li class="teamCard">
@@ -51,7 +95,18 @@
                     <div class="cardRear">
                         <p class="teamRoles">Developer</p>
                         <p class="teamName">Miroslav Semenuk</p>
-                        <p class="city">Kyiv</p>
+                        <!-- <ul class="github">
+                                <li class="githab__link"> -->
+                        <a href="https://github.com/myrsem" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                        
+                                </use>
+                            </svg>
+                        </a>
+                        <!-- </li>
+                                </ul> -->
+                        <!-- <p class="city">Kyiv</p> -->
                     </div>
                 </li>
                 <li class="teamCard">
@@ -61,7 +116,18 @@
                     <div class="cardRear">
                         <p class="teamRoles">Developer</p>
                         <p class="teamName">Mikhailo Korogod</p>
-                        <p class="city">Kyiv</p>
+                        <!-- <ul class="github">
+                                <li class="githab__link"> -->
+                        <a href="https://github.com/MickKorogod" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                        
+                                </use>
+                            </svg>
+                        </a>
+                        <!-- </li>
+                                </ul> -->
+                        <!-- <p class="city">Kyiv</p> -->
                     </div>
                 </li>
                 <li class="teamCard">
@@ -71,7 +137,18 @@
                     <div class="cardRear">
                         <p class="teamRoles">Developer</p>
                         <p class="teamName">Lyuda Golembovska</p>
-                        <p class="city">Kyiv</p>
+                        <!-- <ul class="github">
+                                <li class="githab__link"> -->
+                        <a href="https://github.com/Golembovskaya" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                        
+                                </use>
+                            </svg>
+                        </a>
+                        <!-- </li>
+                                </ul> -->
+                        <!-- <p class="city">Kyiv</p> -->
                         <!-- <a href="https://github.com/Golembovskaya" -->
                     </div>
                 </li>
@@ -82,7 +159,18 @@
                     <div class="cardRear">
                         <p class="teamRoles">Developer</p>
                         <p class="teamName">Natalia Kolomiichenko</p>
-                        <p class="city">Kyiv</p>
+                        <!-- <ul class="github">
+                                <li class="githab__link"> -->
+                        <a href="https://github.com/NataliiaKolomiichenko" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                        
+                                </use>
+                            </svg>
+                        </a>
+                        <!-- </li>
+                                </ul> -->
+                        <!-- <p class="city">Kyiv</p> -->
                     </div>
                 </li>
             </ul>
