--- a/src/sass/components/_modal-footer.scss
+++ b/src/sass/components/_modal-footer.scss
@@ -4,18 +4,16 @@
 .footerModal {
   position: fixed;
   top: 0;
+  bottom: 0;
   left: 0;
   display: flex;
-  width: 100%;
-  height: 100%;
   background-color: var(--background-color_modal-footer);
-  background-position: no-repeat;
+  //background-position: no-repeat;
   background-size: contain;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  pointer-events: none;
-  resize: none;
+  z-index: 99;
 }
 
 
@@ -24,12 +22,6 @@
     width: 120px;
     height: 120px;
   }
-  // .footerHeadline {
-  //   font-size: 30px;
-  // }
-    // .teamList {
-    //   gap: none;
-    // }
 }
 
 @media screen and (min-width: 768px) {
@@ -54,13 +46,19 @@
   }
 }
 
+@media screen and (max-width: 320px) {
+  .teamCard {
+    min-width: 300px;
+  }
+}
+
 .footerHeadline {
   display: inline;
   color: var(--dark-theme-text-color);
   margin: 0;
   margin-bottom: 40px;
 
-  
+
 
   color: var(--secondary-text-modal-color);
 
@@ -106,6 +104,7 @@
 
   background-color: var(--dark-theme-text-color);
 }
+
 .cardRear {
   padding: 10px 5px 10px 5px;
 }
@@ -126,8 +125,22 @@
   }
 }
 
+.teamCard {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  .githab__icon {
+    fill: #fff;
+
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+}
+
 .modal__close-btn-team {
-  fill: var(--dark-theme-text-color);
   position: absolute;
   top: 10px;
   right: 10px;
@@ -140,15 +153,16 @@
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border: none;
-  background-color: transparent;
   padding: 0;
-  cursor: pointer;
-  transition: background-color 250ms var(--timing-function);
   background-image: url(/src/images/close-btn.svg);
   background-size: contain;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.5;
+  }
 }
 
-.modal__close-btn:focus,
-.modal__close-btn:hover {
-  background-color: var(--dark-theme-text-color);
+.body-hiden {
+  overflow: hidden;
 }
