--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -4,6 +4,6 @@
       <!-- сюди будемо динамічно вставляти картки фільмів -->
     </div>
     <div class="list" id="list"></div>
-    <div class="pagenumbers" id="pagination"></div>
+    <div class="page-numbers" id="pagination"></div>
   </div>
 </section>
