--- a/src/sass/components/_custom-pagination.scss
+++ b/src/sass/components/_custom-pagination.scss
@@ -15,7 +15,7 @@ main .list .item:last-of-type {
 main .list .item:hover {
   background: rgba(0, 0, 0, 0.05);
 }
-.pagenumbers {
+.page-numbers {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
