--- a/src/partials/my_lib-main.html
+++ b/src/partials/my_lib-main.html
@@ -1,8 +1,9 @@
 <section class="film-list-section">
-    <div class="container">
-        <div class="my-lib_film-grid">
+    <div class="container container-main">
+        <div class="film-grid">
             <!-- сюди будемо динамічно вставляти картки фільмів -->
         </div>
+        <div class="list" id="list"></div>
+        <div class="page-numbers" id="pagination"></div>
     </div>
 </section>
-
