--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -4,6 +4,9 @@
       <!-- сюди будемо динамічно вставляти картки фільмів -->
     </div>
     <div class="list" id="list"></div>
-    <div class="page-numbers" id="pagination"></div>
+    <div class="page-numbers" id="pagination">
+      <!-- тут будуть з'являтися такі сторінки 
+      <button class="page-button">№ сторінки</button>-->
+    </div>
   </div>
-</section>
+<!-- </section> -->
