--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -145,6 +145,11 @@
     .logo-text {
         @include font(500, 30, 35)
     }
+
+    .header-line {
+        margin-bottom: 40px;
+    }
+
 }
 
 // desktop
