add request message

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,6 +20,7 @@
             </nav>
         </div>
 
+        <div class="wrapper">
         <div class="search">
             <form class="search-form" id="search-form">
                 <input class="input" type="text" name="searchQuery" autocomplete="off" placeholder="Search movies..." />
@@ -30,6 +31,8 @@
                 </button>
             </form>
         </div>
+        <p class="alert hide-load">Search result not successful. Enter the correct movie name and retry.</p>
+    </div>
     </div>
 </header>
 
