Update footer modal hover

--- a/src/partials/team-modal-window.html
+++ b/src/partials/team-modal-window.html
@@ -2,7 +2,7 @@
             <button type="button" data-modal-open-team>Enter</button>
         </div>  -->
 <div class="footerModal is-hidden" data-modal-team>
-    <h3 class="footerHeadline">Worked on a project:</h3>
+    <h3 class="footerHeadline">Worked on the project:</h3>
     <button type="button" class="modal__close-btn-team" data-modal-close-team></button>
     <ul class="teamList">
         <li class="teamCard">
