--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,5 +1,7 @@
 :root {
   --major-font-family: 'Roboto', sans-serif;
+  --modal-fond-family: 'Fira Sans Extra Condensed', sans-serif;
+  --modal-title-style: 'Fjalla One', sans-serif;
 
   --primary-color: #000;
   --secondary-text-color: #545454;
