--- a/src/sass/components/_modal-footer.scss
+++ b/src/sass/components/_modal-footer.scss
@@ -16,6 +16,10 @@ body.modalFooter-open {
   flex-direction: column;
 }
 
+.cardRear {
+margin-top: 20px;
+}
+
 @media screen and (min-width: 320px) {
   .cardFront {
     width: 153px;
@@ -24,6 +28,7 @@ body.modalFooter-open {
 
   .footerHeadline {
     font-size: 30px;
+    font-style: var(--modal-tile-style);
   }
 }
 
@@ -40,12 +45,13 @@ body.modalFooter-open {
 
 @media screen and (min-width: 1280px) {
   .cardFront {
-    width: 256px;
-    height: 256px;
+    width: 300px;
+    height: 300px;
   }
 
   .footerHeadline {
     font-size: 50px;
+    font-style: var(--modal-tile-style);
   }
 }
 
@@ -53,13 +59,12 @@ body.modalFooter-open {
   display: inline;
   color: var(--dark-theme-text-color);
   margin: 0;
-  margin-bottom: 40px;
-
+  margin-bottom: 60px;
   color: var(--secondary-text-modal-color);
-
   font-weight: 100;
   //font-size: 50px;
   line-height: 30px;
+  font-style: var(--modal-title-style);
 }
 
 .teamList {
@@ -71,6 +76,7 @@ body.modalFooter-open {
   padding-left: 0;
   width: 90%;
   gap: 40px;
+  
 }
 
 .teamName,
@@ -79,6 +85,7 @@ body.modalFooter-open {
   justify-content: center;
   align-items: center;
   display: flex;
+  font-style: var(--modal-fond-family);
 }
 
 .teamName {
@@ -108,6 +115,12 @@ body.modalFooter-open {
     height: 0px;
     //position: relative;
   }
+}
+
+.teamCard:focus,
+.teamCard:hover {
+  transform: scale(1.2);
+    box-shadow: rgba(190, 182, 182, 0.1);
 }
 
 .modal__close-btn-team {
