--- a/src/sass/components/_modal-footer.scss
+++ b/src/sass/components/_modal-footer.scss
@@ -12,6 +12,7 @@
   z-index: 99;
   width: 100%;
   height: 100%;
+  transition: opacity 500ms var(--timing-function), visibility 500ms var(--timing-function);
 }
 .teamSection1,
 .teamSection2,
@@ -23,22 +24,24 @@
   gap: 30px;
 }
 
-
-// закоментил на ревью:
-// .cardRear {
-// margin-top: 20px;
-// }
+.cardRear {
+margin-top: 10px;
+}
 
 
 @media screen and (min-width: 320px) {
   .cardFront {
-    width: 153px;
-    height: 153px;
+    width: 120px;
+    height: 120px;
   }
 
   .footerHeadline {
-    font-size: 30px;
+    //font-size: 30px;
     font-style: var(--modal-tile-style);
+  }
+  .modal__close-btn-team {
+    width: 30px;
+    height: 30px;
   }
  
 }
@@ -56,13 +59,8 @@
 
 @media screen and (min-width: 1280px) {
 
-  .cardFront {
-    width: 300px;
-    height: 300px;
-  }
-
   .footerHeadline {
-    font-size: 50px;
+    font-size: 40px;
     font-style: var(--modal-tile-style);
   }
 }
@@ -75,6 +73,7 @@
   .teamSection2,
   .teamSection3 {
     display: block;
+    transition: transform .25s cubic-bezier(.4, 0, .2, 1);
    }
   .modal__close-btn-team {
   width: 30px;
@@ -85,13 +84,9 @@
 .footerHeadline {
   display: inline;
   margin: 0;
-// закоментил на ревью:
-  // margin-bottom: 30px;
-  // margin-top: 20px;
+  margin-bottom: 20px;
+  margin-top: 10px;
 
-
-
-  margin-bottom: 60px;
 
   color: var(--secondary-text-modal-color);
   font-weight: 100;
@@ -108,7 +103,9 @@
   margin: 0;
   padding-left: 0;
   width: 90%;
-  gap: 40px;
+  gap: 30px;
+  list-style: none;
+  overflow-x: hidden;
 }
 
 
@@ -169,6 +166,8 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  transition-duration: 500ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   .githab__icon {
     fill: var(--dark-theme-text-color);
