--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,7 +31,7 @@
                 </button>
             </form>
         </div>
-        <p class="alert hide-load">Search result not successful. Enter the correct movie name and retry.</p>
+        <p class="alert hide-load">Search result not successful. Enter the correct movie name and try again.</p>
     </div>
     </div>
 </header>
