--- a/src/sass/components/_one-card.scss
+++ b/src/sass/components/_one-card.scss
@@ -1,6 +1,7 @@
 .photo-card-img {
   border-radius: 5px;
 }
+
 .card-info {
   @include font(500, 12, 14);
   color: var(--accent-color);
@@ -32,11 +33,12 @@
   color: var(--accent-text-color);
 }
 
-.photo-card {
+.movie-card {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  max-width: 280px;
 }
 
-.photo-card:hover {
+.movie-card:hover {
   transform: scale(1.03);
   cursor: pointer;
 }
@@ -46,29 +48,29 @@
 }
 
 .photo-card-img {
-  height: 574px;
+  height: 355px;
+  object-fit: cover;
+}
+
+// mob responsive
+
+@media screen and (max-width: 319px) {
+  .movie-card {
+    // width: 100%;
+  }
 }
 
 // mob adaptive
 @media screen and (max-width: 767px) {
-  .photo-card {
-    margin-bottom: 20px;
-    padding-left: 20;
-    padding-right: 20px;
-  }
 
   .card-info {
     @include font(500, 12, 14);
-  }
-
-  .photo-card-img {
-    height: 355px;
   }
 }
 
 // tablet
 @media screen and (min-width: 768px) {
-  .photo-card {
+  .movie-card {
     width: 336px;
   }
   .card-info {
@@ -86,7 +88,7 @@
 // desktop
 
 @media screen and (min-width: 1280px) {
-  .photo-card {
+  .movie-card {
     width: 395px;
   }
 
