--- a/src/sass/layout/_film-grid.scss
+++ b/src/sass/layout/_film-grid.scss
@@ -3,6 +3,8 @@
   justify-content: center;
   padding-top: 20px;
   padding-bottom: 40px;
+  grid-template-columns: auto;
+  gap: 20px;
 }
 
 @media screen and (min-width: 768px) {
