--- a/src/sass/components/_one-card.scss
+++ b/src/sass/components/_one-card.scss
@@ -71,7 +71,7 @@
 // tablet
 @media screen and (min-width: 768px) {
   .movie-card {
-    width: 336px;
+    max-width: 336px;
   }
   .card-info {
     @include font(500, 12, 16);
@@ -89,7 +89,7 @@
 
 @media screen and (min-width: 1280px) {
   .movie-card {
-    width: 395px;
+    max-width: 395px;
   }
 
   .photo-card-img {
@@ -100,6 +100,7 @@
   .card-info {
     @include font(500, 20, 24);
   }
+  
   .film-rating {
     width: 40px;
     height: 20px;
