--- a/src/partials/team-modal-window.html
+++ b/src/partials/team-modal-window.html
@@ -1,141 +1,141 @@
 <div class="footerModal is-hidden" data-modal-team>
     <h3 class="footerHeadline">Worked on the project:</h3>
     <button type="button" class="modal__close-btn-team" data-modal-close-team></button>
-    <ul class="teamList">
-        <div class="teamSection1">
-        <li class="teamCard">
-            <img class="cardFront" src="https://avatars.githubusercontent.com/u/97597653?v=4" alt="" width="256"
-                height="256">
-            <div class="cardRear">
-                <p class="teamRoles">Team lead</p>
-                <div class="gitAndName">
-                <a href="https://github.com/PeterYurich" target="_blank" class="city">
-                    <svg class="githab__icon" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-github">
-                        </use>
-                    </svg>
-                </a>
-                <p class="teamName">Peter<br>Yurich</p>
+    <div class="teamList">
+        <ul class="teamSection1">
+            <li class="teamCard">
+                <img class="cardFront" src="https://avatars.githubusercontent.com/u/97597653?v=4" alt="" width="256"
+                    height="256">
+                <div class="person-info">
+                    <p class="teamRoles">Team lead</p>
+                    <div class="gitAndName">
+                        <a href="https://github.com/PeterYurich" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                                </use>
+                            </svg>
+                        </a>
+                        <p class="teamName">Peter<br>Yurich</p>
+                    </div>
                 </div>
-            </div>
-        </li>
-        <li class="teamCard">
-            <img class="cardFront" src="https://avatars.githubusercontent.com/u/93533516?v=4" alt="" width="256"
-                height="256">
-            <div class="cardRear">
-                <p class="teamRoles">Scrum master</p>
-                <div class="gitAndName">
-                <a href="https://github.com/TanichkaIs" target="_blank" class="city">
-                    <svg class="githab__icon" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-github">
-                        </use>
-                    </svg>
-                </a>
-                <p class="teamName">Tetiana<br>Ishchenko</p>
+            </li>
+            <li class="teamCard">
+                <img class="cardFront" src="https://avatars.githubusercontent.com/u/93533516?v=4" alt="" width="256"
+                    height="256">
+                <div class="person-info">
+                    <p class="teamRoles">Scrum master</p>
+                    <div class="gitAndName">
+                        <a href="https://github.com/TanichkaIs" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                                </use>
+                            </svg>
+                        </a>
+                        <p class="teamName">Tetiana<br>Ishchenko</p>
+                    </div>
                 </div>
-            </div>
-        </li>
-        </div>
-        <div class="teamSection2">
-        <li class="teamCard">
-            <img class="cardFront" src="https://avatars.githubusercontent.com/u/97792710?v=4" alt="" width="256"
-                height="256">
-            <div class="cardRear">
-                <p class="teamRoles">Developer</p>
-                <div class="gitAndName">
-                <a href="https://github.com/YevhenProkhorenko" target="_blank" class="city">
-                    <svg class="githab__icon" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-github">
-                        </use>
-                    </svg>
-                </a>
-                <p class="teamName">Evgen<br>Prohorenko</p>
+            </li>
+        </ul>
+        <ul class="teamSection2">
+            <li class="teamCard">
+                <img class="cardFront" src="https://avatars.githubusercontent.com/u/97792710?v=4" alt="" width="256"
+                    height="256">
+                <div class="person-info">
+                    <p class="teamRoles">Developer</p>
+                    <div class="gitAndName">
+                        <a href="https://github.com/YevhenProkhorenko" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                                </use>
+                            </svg>
+                        </a>
+                        <p class="teamName">Evgen<br>Prohorenko</p>
+                    </div>
                 </div>
-            </div>
-        </li>
-        <li class="teamCard">
-            <img class="cardFront" src="https://avatars.githubusercontent.com/u/97344472?v=4" alt="" width="256"
-                height="256">
-            <div class="cardRear">
-                <p class="teamRoles">Developer</p>
-                <div class="gitAndName">
-                <a href="https://github.com/abeskhlibnova" target="_blank" class="city">
-                    <svg class="githab__icon" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-github">
-                        </use>
-                    </svg>
-                </a>
-                <p class="teamName">Alona<br>Beskhlibnova</p>
+            </li>
+            <li class="teamCard">
+                <img class="cardFront" src="https://avatars.githubusercontent.com/u/97344472?v=4" alt="" width="256"
+                    height="256">
+                <div class="person-info">
+                    <p class="teamRoles">Developer</p>
+                    <div class="gitAndName">
+                        <a href="https://github.com/abeskhlibnova" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                                </use>
+                            </svg>
+                        </a>
+                        <p class="teamName">Alona<br>Beskhlibnova</p>
+                    </div>
                 </div>
-            </div>
-        </li>
-        <li class="teamCard">
-            <img class="cardFront" src="https://avatars.githubusercontent.com/u/97482927?v=4" alt="" width="256"
-                height="256">
-            <div class="cardRear">
-                <p class="teamRoles">Developer</p>
-                <div class="gitAndName">
-                <a href="https://github.com/myrsem" target="_blank" class="city">
-                    <svg class="githab__icon" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-github">
-                        </use>
-                    </svg>
-                </a>
-                <p class="teamName">Myroslav<br>Semeniuk</p>
+            </li>
+            <li class="teamCard">
+                <img class="cardFront" src="https://avatars.githubusercontent.com/u/97482927?v=4" alt="" width="256"
+                    height="256">
+                <div class="person-info">
+                    <p class="teamRoles">Developer</p>
+                    <div class="gitAndName">
+                        <a href="https://github.com/myrsem" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                                </use>
+                            </svg>
+                        </a>
+                        <p class="teamName">Myroslav<br>Semeniuk</p>
+                    </div>
                 </div>
-            </div>
-        </li>
-        </div>
-        <div class="teamSection3">
-        <li class="teamCard">
-            <img class="cardFront" src="https://avatars.githubusercontent.com/u/99369016?v=4" alt="" width="256"
-                height="256">
-            <div class="cardRear">
-                <p class="teamRoles">Developer</p>
-                <div class="gitAndName">
-                <a href="https://github.com/MickKorogod" target="_blank" class="city">
-                    <svg class="githab__icon" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-github">
-                        </use>
-                    </svg>
-                </a>
-                <p class="teamName">Mikhailo<br>Korogod</p>
+            </li>
+        </ul>
+        <ul class="teamSection3">
+            <li class="teamCard">
+                <img class="cardFront" src="https://avatars.githubusercontent.com/u/99369016?v=4" alt="" width="256"
+                    height="256">
+                <div class="person-info">
+                    <p class="teamRoles">Developer</p>
+                    <div class="gitAndName">
+                        <a href="https://github.com/MickKorogod" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                                </use>
+                            </svg>
+                        </a>
+                        <p class="teamName">Mikhailo<br>Korogod</p>
+                    </div>
                 </div>
-            </div>
-        </li>
-        <li class="teamCard">
-            <img class="cardFront"
-                src="https://avatars.githubusercontent.com/u/97561552?s=400&u=95d42ab96a1fd812b523d15edba99c985cd13104&v=4"
-                alt="" width="256" height="256">
-            <div class="cardRear">
-                <p class="teamRoles">Developer</p>
-                <div class="gitAndName">
-                <a href="https://github.com/Golembovskaya" target="_blank" class="city">
-                    <svg class="githab__icon" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-github">
-                        </use>
-                    </svg>
-                </a>
-                <p class="teamName">Lyuda<br>Golembovska</p>
+            </li>
+            <li class="teamCard">
+                <img class="cardFront"
+                    src="https://avatars.githubusercontent.com/u/97561552?s=400&u=95d42ab96a1fd812b523d15edba99c985cd13104&v=4"
+                    alt="" width="256" height="256">
+                <div class="person-info">
+                    <p class="teamRoles">Developer</p>
+                    <div class="gitAndName">
+                        <a href="https://github.com/Golembovskaya" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                                </use>
+                            </svg>
+                        </a>
+                        <p class="teamName">Lyuda<br>Golembovska</p>
+                    </div>
                 </div>
-            </div>
-        </li>
-        <li class="teamCard">
-            <img class="cardFront" src="https://avatars.githubusercontent.com/u/96379129?v=4" alt="" width="256"
-                height="256">
-            <div class="cardRear">
-                <p class="teamRoles">Developer</p>
-                <div class="gitAndName">
-                <a href="https://github.com/NataliiaKolomiichenko" target="_blank" class="city">
-                    <svg class="githab__icon" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-github">
-                        </use>
-                    </svg>
-                </a>
-                <p class="teamName">Natalia<br>Kolomiichenko</p>
+            </li>
+            <li class="teamCard">
+                <img class="cardFront" src="https://avatars.githubusercontent.com/u/96379129?v=4" alt="" width="256"
+                    height="256">
+                <div class="person-info">
+                    <p class="teamRoles">Developer</p>
+                    <div class="gitAndName">
+                        <a href="https://github.com/NataliiaKolomiichenko" target="_blank" class="city">
+                            <svg class="githab__icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-github">
+                                </use>
+                            </svg>
+                        </a>
+                        <p class="teamName">Natalia<br>Kolomiichenko</p>
+                    </div>
                 </div>
-            </div>
-        </li>
-        </div>
-    </ul>
+            </li>
+        </ul>
+    </div>
 </div>
